1. sonarqube 2. compatible android